# office-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BACKEND.md  CONFIGURATION.md  EXTENSION.md  FRONTEND.md  TESTING.md
extension/: background.js  manifest.json
extension/content/: base-observer.js  observer-chatgpt.js  observer-claude.js  observer-gemini.js
extension/icons/: generate-icons.js
extension/native-messaging/: host.cjs  install.sh  office-ai-host  office_ai.json
extension/popup/: popup.css  popup.html  popup.js
production/: Dockerfile.linux
production/scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
scripts/: generate-effects.ts  generate-sprites.ts  generate-tiles.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs
src-tauri/src/discovery/: agent_registry.rs  file_activity_reader.rs  log_reader.rs  log_watcher.rs  mod.rs  process_scanner.rs
src-tauri/src/interceptor/: claude_code_parser.rs  codex_cli_parser.rs  cursor_ide_parser.rs  gemini_cli_parser.rs  generic_cli_parser.rs  mod.rs  parsed_event.rs  parser_registry.rs  parser_trait.rs  state_classifier.rs  windsurf_ide_parser.rs
src-tauri/src/ipc/: commands.rs  events.rs  extension_server.rs  mod.rs
src-tauri/src/models/: agent_state.rs  bug_report.rs  config.rs  mod.rs
(+66 files in other folders)
