[package]
name = "office-ai"
version = "0.1.0"
description = "OfficeAI — desktop app for visualizing AI agents as office employees"
authors = ["OfficeAI Team"]
edition = "2021"

[lib]
name = "office_ai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "OfficeAI"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
